Add testing against JDK 23